--- a/Project 1(Variable Illustration)/style.scss
+++ b/Project 1(Variable Illustration)/style.scss
@@ -34,3 +34,15 @@ section.cards{
     top:-55px;
     right: -50px;
 }
+.image1{
+    background:url(one.jpg);
+}
+.image2{
+    background:url(two.jpg);
+}
+.image3{
+    background:url(three.jpg);
+}
+.image4{
+    background:url(four.jpg);
+}
