--- a/Project 1(Variable Illustration)/style.css
+++ b/Project 1(Variable Illustration)/style.css
@@ -35,4 +35,20 @@ section.cards {
   border-radius: 100%;
   top: -55px;
   right: -50px;
+}
+
+.image1 {
+  background: url(one.jpg);
+}
+
+.image2 {
+  background: url(two.jpg);
+}
+
+.image3 {
+  background: url(three.jpg);
+}
+
+.image4 {
+  background: url(four.jpg);
 }/*# sourceMappingURL=style.css.map */
