--- a/Project 3(Paricles Illustration)/style.css
+++ b/Project 3(Paricles Illustration)/style.css
@@ -1,1 +1,30 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 65px;
+  padding: 20px 50px;
+  position: fixed;
+  background-color: white;
+}
+nav h1 {
+  font-size: 1.5rem;
+  padding-right: 2rem;
+}
+nav li {
+  display: inline;
+}
+nav a {
+  text-decoration: none;
+  padding: 50px;
+  color: black;
+  font-size: 1.01rem;
+}/*# sourceMappingURL=style.css.map */
