--- a/Project 3(Paricles Illustration)/style.css
+++ b/Project 3(Paricles Illustration)/style.css
@@ -13,7 +13,7 @@ nav {
   height: 65px;
   padding: 20px 50px;
   position: fixed;
-  background-color: white;
+  background-color: rgb(249, 241, 226);
 }
 nav h1 {
   font-size: 1.5rem;
@@ -27,4 +27,39 @@ nav a {
   padding: 50px;
   color: black;
   font-size: 1.01rem;
+}
+
+header {
+  width: 100%;
+  height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1488330890490-c291ecf62571?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+header p {
+  font-size: 1.12rem;
+  padding-bottom: 28px;
+}
+header button {
+  border: none;
+  background: transparent;
+}
+header a {
+  text-decoration: none;
+  padding: 10px 25px;
+  background-color: white;
+  color: black;
+  font-weight: bolder;
+}
+
+header h1 {
+  font-size: 2.8rem;
+  padding-bottom: 20px;
 }/*# sourceMappingURL=style.css.map */
