--- a/Project 3(Paricles Illustration)/style.scss
+++ b/Project 3(Paricles Illustration)/style.scss
@@ -61,3 +61,59 @@ header h1{
     font-size: 2.8rem;
     padding-bottom: 20px;
 }
+section{
+    height: auto;
+    width: 100%;
+    margin: 3rem 0;
+    
+}
+.c1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 200px;
+}
+.c2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.img{
+    width:400px;
+    height: 480px;
+    border-radius: 100%;
+}
+.w{
+    height:250px;
+    width: 600px;
+    h1{
+        font-size: 2rem;
+        margin: 30px 0;
+    }
+    p{
+        font-size: 1.1rem
+    }
+}
+.gallery{
+    width: 100%;
+    height: auto;
+    h1{
+        text-align: center;
+        font-size: 2rem;
+        margin:2rem 0;
+    }
+
+}
+.ig{
+    width:400px;
+    height: 450px;
+    margin: 2rem;
+    
+}
+.cont{
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
