--- a/Project 3(Paricles Illustration)/style.scss
+++ b/Project 3(Paricles Illustration)/style.scss
@@ -1,149 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
-nav{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 65px;
-    padding:20px 50px;
-    position: fixed;
-    background-color: rgb(249, 241, 226);
-    
-    h1{
-        font-size: 1.5rem;
-        padding-right: 2rem;
-    }
-    li{
-        display: inline;
-    }
-    a{
-        text-decoration: none;
-        padding:50px;
-        color: black;
-        font-size: 1.01rem;
-    }
-}
-header{
-        width: 100%;
-        height: 100vh;
-        background-image: url(https://images.unsplash.com/photo-1488330890490-c291ecf62571?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        p{
-            font-size: 1.12rem;
-            padding-bottom: 28px;
-        }
-        button{
-            border:none;
-            background: transparent;
-        }
-        a{
-            text-decoration: none;
-            padding: 10px 25px;
-            background-color: white;
-            color: black;
-            font-weight: bolder;
-        }
-}
-header h1{
-    font-size: 2.8rem;
-    padding-bottom: 20px;
-}
-section{
-    height: auto;
-    width: 100%;
-    margin: 3rem 0;
-    
-}
-.c1{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 200px;
-}
-.c2{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.img{
-    width:400px;
-    height: 480px;
-    border-radius: 100%;
-}
-.w{
-    height:250px;
-    width: 600px;
-    h1{
-        font-size: 2rem;
-        margin: 30px 0;
-    }
-    p{
-        font-size: 1.1rem
-    }
-}
-.gallery{
-    width: 100%;
-    height: auto;
-    h1{
-        text-align: center;
-        font-size: 2rem;
-        margin:2rem 0;
-    }
+@import "Components/reset";
+@import "Components/nav";
+@import "Components/header";
+@import "Components/cards";
+@import "Components/gallery";
+@import "Components/footer";
 
-}
-.ig{
-    width:400px;
-    height: 450px;
-    margin: 2rem;
-    
-}
-.cont{
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-}
-footer{
-    h1{
-        text-align: center;
-    }
-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-}
-input{
-    padding: 10px 30px;
-    margin-bottom: 1.3rem;
-}
-textarea{
-    padding: 40px 100px;
-    margin-bottom: 1.3rem;
-}
-button{
-    border: none;
-    background-color: transparent;
-}
-a{
-    padding:10px 25px ;
-    text-decoration: none;
-    color: white;
-    background-color: #000;
-}
-}
+
+
+
