--- a/Project 4(Mixin Illustration)/style.css
+++ b/Project 4(Mixin Illustration)/style.css
@@ -11,13 +11,31 @@ section {
   height: 100vh;
   width: 100%;
 }
-section .card {
+section .card1 {
   height: 450px;
   width: 400px;
-  background-color: crimson;
+  background-image: linear-gradient(to bottom, #ec4bd2, rgba(235, 75, 208, 0.3647058824));
   margin: 4rem;
   border-radius: 10px;
   padding: 30px;
+}
+section .card2 {
+  height: 450px;
+  width: 400px;
+  background-image: linear-gradient(to bottom, #ec4bd2, rgba(235, 75, 208, 0.3647058824));
+  margin: 4rem;
+  border-radius: 10px;
+  padding: 30px;
+  background-image: linear-gradient(to bottom, #2cdbb0, rgba(185, 197, 8, 0.3647058824));
+}
+section .card3 {
+  height: 450px;
+  width: 400px;
+  background-image: linear-gradient(to bottom, #ec4bd2, rgba(235, 75, 208, 0.3647058824));
+  margin: 4rem;
+  border-radius: 10px;
+  padding: 30px;
+  background-image: linear-gradient(to bottom, rgba(6, 13, 163, 0.3647058824), #4ba1ec);
 }
 section .writings {
   display: flex;
