--- a/Project 4(Mixin Illustration)/style.scss
+++ b/Project 4(Mixin Illustration)/style.scss
@@ -14,7 +14,7 @@
 @mixin card{
     height:450px;
     width: 400px;
-    background-color: crimson;
+    background-image:linear-gradient(to bottom, #ec4bd2, #eb4bd05d);
     margin:4rem;
     border-radius: 10px;
     padding :30px;
@@ -35,8 +35,17 @@ section{
     height: 100vh;
     width: 100%;
 
-.card{
+.card1{
     @include card;
+    
+}
+.card2{
+    @include card;
+    background-image:linear-gradient(to bottom, #2cdbb0, #b9c5085d);
+}
+.card3{
+    @include card;
+    background-image:linear-gradient(to bottom, #060da35d, #4ba1ec);
 }
 .writings{
     @include write;
