--- a/Project 5(Extend Illustration)/style.css
+++ b/Project 5(Extend Illustration)/style.css
@@ -1,1 +1,28 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.flex-center, header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+header {
+  text-align: center;
+  height: 60vh;
+  font-family: sans-serif;
+  color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.179), rgba(0, 0, 0, 0.65)), url("https://images.unsplash.com/photo-1606787366850-de6330128bfc?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+header p {
+  max-width: 700px;
+}/*# sourceMappingURL=style.css.map */
