--- a/Project 5(Extend Illustration)/style.css
+++ b/Project 5(Extend Illustration)/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.flex-center, section .cartmaon, header {
+.flex-center, section .cartmaon .card, section .cartmaon, header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,10 +31,40 @@ section {
   height: auto;
 }
 section .cartmaon {
+  margin: 2rem;
   flex-direction: row;
-  background-color: aqua;
 }
-section .card1 {
-  height: 800px;
-  width: 850px;
+section .cartmaon .card {
+  height: 390px;
+  width: 500px;
+  padding: 40px;
+  border: 1px solid rgb(92, 92, 92);
+  margin: 20px;
+  text-align: center;
+  font-family: sans-serif;
+  color: white;
+}
+section .cartmaon .card1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.179), rgba(0, 0, 0, 0.65)), url("https://images.unsplash.com/photo-1543352634-99a5d50ae78e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+section .cartmaon .card2 {
+  background: linear-gradient(rgba(0, 0, 0, 0.179), rgba(0, 0, 0, 0.65)), url("https://images.unsplash.com/photo-1657299170932-e75407883a6a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+section .cartmaon .card3 {
+  background: linear-gradient(rgba(0, 0, 0, 0.179), rgba(0, 0, 0, 0.65)), url("https://images.unsplash.com/photo-1490645935967-10de6ba17061?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2053&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+section .cartmaon .card4 {
+  background: linear-gradient(rgba(0, 0, 0, 0.179), rgba(0, 0, 0, 0.65)), url("https://images.unsplash.com/photo-1594046243098-0fceea9d451e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }/*# sourceMappingURL=style.css.map */
