--- a/Project 5(Extend Illustration)/style.css
+++ b/Project 5(Extend Illustration)/style.css
@@ -67,4 +67,16 @@ section .cartmaon .card4 {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+section .cartmaon h1 {
+  font-size: 2.1rem;
+}
+section .cartmaon p {
+  margin: 20px 0;
+}
+section .cartmaon button {
+  padding: 10px 20px;
+  margin-left: 8px;
+  background-color: #515151;
+  border: 1px solid #515151;
 }/*# sourceMappingURL=style.css.map */
