--- a/Project 5(Extend Illustration)/style.scss
+++ b/Project 5(Extend Illustration)/style.scss
@@ -69,9 +69,17 @@ section{
         background-position: center;
         background-size: cover;
     }
-    h
+    h1{
+        font-size: 2.1rem;
+    }
+    p{
+        margin:20px 0;
+    }
     button{
-
+        padding: 10px 20px;
+        margin-left: 8px;
+        background-color: #515151;
+        border: 1px solid #515151;
     }
 }
 }
