--- a/Project 6(Portfolio Template)/style.css
+++ b/Project 6(Portfolio Template)/style.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap");/*# sourceMappingURL=style.css.map */
