--- a/Project 6(Portfolio Template)/style.scss
+++ b/Project 6(Portfolio Template)/style.scss
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
-@import "Componentes\(partials\)/resets";
-@import "Componentes\(partials\)/nav";
-@import "Componentes\(partials\)/header";
-@import "Componentes\(partials\)/projects";
-@import "Componentes\(partials\)/reviews";
-@import "Componentes\(partials\)/about";
-@import "Componentes\(partials\)/footer";
-
+@import "Componentes/resets";
+@import "Componentes/nav";
+@import "Componentes/header";
+@import "Componentes/project";
+@import "Componentes/reviews";
+@import "Componentes/about";
+@import "Componentes/footer";
+@import "Componentes/variables";
 //body
 body {
   background-color: #211f22;
