--- a/Project 6(Portfolio Template)/style.css
+++ b/Project 6(Portfolio Template)/style.css
@@ -6,6 +6,29 @@
   box-sizing: border-box;
 }
 
+nav {
+  background: linear-gradient(to right, #4f2d62, #ac39ea);
+  height: 50vh;
+  width: 100%;
+}
+nav .container {
+  display: flex;
+  justify-content: end;
+  margin-right: 40px;
+}
+nav ul {
+  margin-top: 20px;
+}
+nav li {
+  list-style: none;
+}
+nav a {
+  text-decoration: none;
+  color: #fff;
+  margin-left: 30px;
+  font-size: 1.11rem;
+}
+
 body {
   background-color: #211f22;
 }/*# sourceMappingURL=style.css.map */
