--- a/Project 6(Portfolio Template)/Componentes/_header.scss
+++ b/Project 6(Portfolio Template)/Componentes/_header.scss
@@ -1,1 +1,29 @@
+.frame-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 
+  .gradient {
+    background: linear-gradient(to left, #35d08f, #e32e64);
+    width: 72%;
+    height: 76%;
+    position: absolute;
+    bottom: 74px;
+    border-radius: 10px;
+  }
+  header {
+    width: 70%;
+    height: 90%;
+    margin-top: 7rem;
+    background-image: url("Images/simon-de-vries-UQluWXKUn7A-unsplash.jpg");
+    background-size: cover;
+    background-position: 0 -280px;
+    background-repeat: no-repeat;
+    position: relative;
+
+    @media screen and (max-width: 700px) {
+      background-position: center;
+    }
+  }
+}
