--- a/Project 6(Portfolio Template)/Componentes/_nav.scss
+++ b/Project 6(Portfolio Template)/Componentes/_nav.scss
@@ -1,23 +1,26 @@
-nav {
-  background: linear-gradient(to right, #4f2d62, #ac39ea);
+.container {
   height: 50vh;
-  width: 100%;
-  font-family: $primary-font;
-  .container {
+  background: linear-gradient(to right, #4f2d62, #ac39ea);
+
+  nav {
     display: flex;
-    justify-content: end;
-    margin-right: 40px;
-  }
-  ul {
-    margin-top: 20px;
-  }
-  li {
-    list-style: none;
-  }
-  a {
-    text-decoration: none;
-    color: #fff;
-    margin-left: 30px;
-    font-size: 1.11rem;
+    justify-content: flex-end;
+
+    ul {
+      margin-right: 40px;
+      margin-top: 20px;
+
+      li {
+        display: inline;
+        list-style: none;
+        margin-left: 30px;
+
+        a {
+          text-decoration: none;
+          color: #fff;
+          font-size: 1.12rem;
+        }
+      }
+    }
   }
 }
