--- a/Project 6(Portfolio Template)/Componentes/_header.scss
+++ b/Project 6(Portfolio Template)/Componentes/_header.scss
@@ -18,12 +18,13 @@
     margin-top: 7rem;
     background-image: url("Images/simon-de-vries-UQluWXKUn7A-unsplash.jpg");
     background-size: cover;
-    background-position: 0 -280px;
+    background-position: 0 -370px;
     background-repeat: no-repeat;
     position: relative;
 
     @media screen and (max-width: 700px) {
       background-position: center;
+      margin-bottom: 2rem;
     }
   }
 }
