--- a/Project 6(Portfolio Template)/style.css
+++ b/Project 6(Portfolio Template)/style.css
@@ -49,13 +49,14 @@
   margin-top: 7rem;
   background-image: url("Images/simon-de-vries-UQluWXKUn7A-unsplash.jpg");
   background-size: cover;
-  background-position: 0 -280px;
+  background-position: 0 -370px;
   background-repeat: no-repeat;
   position: relative;
 }
 @media screen and (max-width: 700px) {
   .frame-container header {
     background-position: center;
+    margin-bottom: 2rem;
   }
 }
 
