--- a/Project 6(Portfolio Template)/Componentes/_header.scss
+++ b/Project 6(Portfolio Template)/Componentes/_header.scss
@@ -26,5 +26,34 @@
       background-position: center;
       margin-bottom: 2rem;
     }
+    .social {
+      height: 100%;
+      width: 10%;
+      color: #fff;
+      font-size: 1.8rem;
+      display: flex;
+      margin-left: 10px;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      .fa-brands {
+        margin-bottom: 10px;
+      }
+      .line {
+        height: 20%;
+        width: 50px;
+        width: 4px;
+        border-radius: 10px;
+        background: #ae81bf;
+        margin: 0 auto;
+        margin-bottom: 20px;
+      }
+    }
+    h1 {
+      font-size: 5rem;
+      color: #fff;
+      margin-left: 100px;
+      transform: translateY(-60px);
+    }
   }
 }
