--- a/Project 6(Portfolio Template)/style.css
+++ b/Project 6(Portfolio Template)/style.css
@@ -59,6 +59,35 @@
     margin-bottom: 2rem;
   }
 }
+.frame-container header .social {
+  height: 100%;
+  width: 10%;
+  color: #fff;
+  font-size: 1.8rem;
+  display: flex;
+  margin-left: 10px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.frame-container header .social .fa-brands {
+  margin-bottom: 10px;
+}
+.frame-container header .social .line {
+  height: 20%;
+  width: 50px;
+  width: 4px;
+  border-radius: 10px;
+  background: #ae81bf;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+.frame-container header h1 {
+  font-size: 5rem;
+  color: #fff;
+  margin-left: 100px;
+  transform: translateY(-60px);
+}
 
 body {
   background-color: #211f22;
