--- a/Project 6(Portfolio Template)/Componentes/_variables.scss
+++ b/Project 6(Portfolio Template)/Componentes/_variables.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 $bg-img-cover: no-repeat center/cover;
 $label_clr: #a281bf64;
 $main-font: "Playfair Display", serif;
