--- a/Project 6(Portfolio Template)/style.css
+++ b/Project 6(Portfolio Template)/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -87,6 +90,54 @@
   color: #fff;
   margin-left: 100px;
   transform: translateY(-60px);
+}
+
+.project .title {
+  margin-left: 30px;
+  margin-top: 8rem;
+  font-family: "Playfair Display", serif;
+  color: white;
+  font-size: 4rem;
+  transform: translateY(-50px);
+}
+.project .title span {
+  background-color: #ae81bf;
+}
+
+.img-cont {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img-cont img {
+  height: 100vh;
+  width: 170px;
+  margin: 30px 20px;
+}
+
+.i1 {
+  transform: translateY(200px);
+}
+
+.i2 {
+  transform: translateY(150px);
+}
+
+.i3 {
+  transform: translateY(100px);
+}
+
+.i5 {
+  transform: translateY(200px);
+}
+
+.i6 {
+  transform: translateY(150px);
+}
+
+.i7 {
+  transform: translateY(100px);
 }
 
 .about {
