--- a/Project 6(Portfolio Template)/style.css
+++ b/Project 6(Portfolio Template)/style.css
@@ -140,6 +140,54 @@
   transform: translateY(100px);
 }
 
+.title {
+  margin-left: 30px;
+  margin-top: 13rem;
+  font-family: "Playfair Display", serif;
+  color: white;
+  font-size: 4rem;
+}
+.title span {
+  background-color: #ae81bf;
+}
+
+.clients {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60vh;
+}
+.clients .card-cont {
+  width: 300px;
+  height: 350px;
+  padding: 30px;
+  margin: 50px;
+  background: #2b252e;
+  color: rgb(199, 199, 199);
+  border-radius: 15px;
+}
+
+.img {
+  height: 50px;
+  width: 50px;
+  border-radius: 100px;
+  background-image: url(Images/clients/alex-mccarthy-RGKdWJOUFH0-unsplash.jpg);
+  background-position: center;
+  background-size: cover;
+  margin: 10px 0;
+  margin-right: 15px;
+}
+
+.img2 {
+  background-image: url(Images/clients/ali-morshedlou-WMD64tMfc4k-unsplash.jpg);
+}
+
+.info {
+  display: flex;
+  align-items: center;
+}
+
 .about {
   height: 80vh;
   display: flex;
